bases/kibana/kibana-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-log-kibana
  labels:
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Kibana"
spec:
  ports:
  - port: 6001
    protocol: TCP
    targetPort: auth-proxy
    name: auth-proxy
  - port: 5601
    protocol: TCP
    targetPort: ui
    name: ui
  selector:
    k8s-app: elasticsearch-log-kibana
